login-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app-deployment
  labels:
    app: my-login-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-login-app
  template:
    metadata:
      labels:
        app: my-login-app
    spec:
      containers:
        - name: login-app-container
          image: snehaburli/login-app:v5
          ports:
            - containerPort: 7500
          resources:
            limits:
              cpu: "3Gi"
              memory: "3Gi"
            requests:
              cpu: "3Gi"
              memory: "3Gi" 
          volumeMounts:
            - name: data-volume
              mountPath: /tmp
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: login-app-pvc
