login-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: login-app-service 
spec:
  selector:
    app: my-login-app
  ports:
    - port: 80
      targetPort: 7500
  type: ClusterIP
